# qt6-qml-sidebar

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  terminal_process.cpp  terminal_process.h
ui/: CMakeLists.txt  Main.qml  Sidebar.qml
ui/pages/: HomePage.qml  SettingsPage.qml  TerminalPage.qml  TestPage.qml
